# douyin-likes-to-text

./: .gitignore  LICENSE  README.md  app_paths.py  config.example.yml  desktop_app.py  desktop_app_launcher.pyw  douyin-downloader-config.example.yml  launch-desktop-app.vbs  process_likes.py  pyproject.toml
.github/workflows/: tests.yml
runtime/: README.md
scripts/: README.md  bootstrap.ps1
tests/: test_desktop_app.py  test_process_likes.py  test_selection_queue.py
