[project]
name = "douyin-to-text"
version = "0.3.1"
description = "Private local desktop picker and temporary transcription workflow for Douyin videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiofiles>=23.2.1",
  "aiohttp>=3.9.0",
  "aiosqlite>=0.19.0",
  "faster-whisper>=1.1.1",
  "gmssl>=3.2.2",
  "httpx>=0.25",
  "imageio-ffmpeg==0.6.0",
  "python-dateutil>=2.8.2",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "sv-ttk>=2.6.0",
]

[tool.uv]
package = false
